--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <!-- output screen -->
       <div class="output">
         <!-- Whatever we typed in previously-->
-        <div class="previous-operand"></div>
+        <div class="previous-operand">123</div>
         <!-- Whatever we are currently typing in -->
-        <div class="current-operand"></div>
+        <div class="current-operand">456</div>
       </div>
       <!-- Takes up space of two buttons -->
       <button class="span-two">AC</button>
