--- a/index.html
+++ b/index.html
@@ -13,30 +13,32 @@
     <div class="calculator-grid">
       <!-- output screen -->
       <div class="output">
+        <!-- data attrbutes instead of classes because we don't want to mix our style and classes w/ our JS. easier 
+        to see what parts of html are being used by JS. -->
         <!-- Whatever we typed in previously-->
-        <div class="previous-operand">123</div>
+        <div data-previous-operand class="previous-operand"></div>
         <!-- Whatever we are currently typing in -->
-        <div class="current-operand">456</div>
+        <div data-current-operand class="current-operand"></div>
       </div>
       <!-- Takes up space of two buttons -->
-      <button class="span-two">AC</button>
-      <button>DEL</button>
-      <button>÷</button>
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>*</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button>+</button>
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button>-</button>
-      <button>.</button>
-      <button>0</button>
-      <button class="span-two">=</button>
+      <button data-all-clear class="span-two">AC</button>
+      <button data-delete>DEL</button>
+      <button data-operation>÷</button>
+      <button data-number>1</button>
+      <button data-number>2</button>
+      <button data-number>3</button>
+      <button data-operation>*</button>
+      <button data-number>4</button>
+      <button data-number>5</button>
+      <button data-number>6</button>
+      <button data-operation>+</button>
+      <button data-number>7</button>
+      <button data-number>8</button>
+      <button data-number>9</button>
+      <button data-operation>-</button>
+      <button data-number>.</button>
+      <button data-number>0</button>
+      <button data-equals class="span-two">=</button>
     </div>
   </body>
 </html>
